--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,15 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[lib]
+proc-macro = true
+
 [dependencies]
+anyhow = "1.0.83"
+futures = "0.3.30"
+tokio = { version = "1.37.0", features = [
+	"rt",
+	"net",
+	"rt-multi-thread",
+	"macros",
+] }
