--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [lib]
 proc-macro = true
 
-[dependencies]
+[dev-dependencies]
 anyhow = "1.0.83"
 futures = "0.3.30"
 tokio = { version = "1.37.0", features = [
@@ -17,3 +17,8 @@ tokio = { version = "1.37.0", features = [
 	"rt-multi-thread",
 	"macros",
 ] }
+
+[dependencies]
+proc-macro2 = "1.0.82"
+quote = "1.0.36"
+syn = { version = "2.0.61", features = ["extra-traits"] }
