--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.37.0", features = [
 ] }
 
 [dependencies]
+darling = "0.20.8"
 proc-macro2 = "1.0.82"
 quote = "1.0.36"
 syn = { version = "2.0.61", features = ["extra-traits"] }
